# UsersAccounting

./: .gitignore  CMakeLists.txt  README.md
UsersAccounting/client/: CMakeLists.txt
UsersAccounting/client/headers/: AddServerDialog.h  AddUserDialog.h  UsersWindow.h
UsersAccounting/client/headers/delegate/: ServerItemDelegate.h
UsersAccounting/client/headers/models/: ServerData.h
UsersAccounting/client/headers/server/: ServerConnection.h
UsersAccounting/client/headers/ui/: MainUi.h  NewServerUi.h  NewUserUi.h
UsersAccounting/client/headers/utils/: enumWrapper.h  enums.h
UsersAccounting/client/headers/view/: UsersViewModel.h
UsersAccounting/client/src/: AddServerDialog.cpp  AddUserDialog.cpp  Info.plist  UsersWindow.cpp  client.cpp
UsersAccounting/client/src/delegate/: ServerItemDelegate.cpp
UsersAccounting/client/src/server/: ServerConnection.cpp
UsersAccounting/client/src/ui/: MainUi.cpp  NewServerUi.cpp  NewUserUi.cpp
UsersAccounting/client/src/view/: UsersViewModel.cpp
UsersAccounting/server/: CMakeLists.txt  server.cpp
UsersAccounting/server/database/: source.sqlite
UsersAccounting/server/headers/: DatabaseRepository.h  ServerManager.h
UsersAccounting/server/headers/cmd_parser/: CommandLineParser.h
UsersAccounting/server/headers/controllers/: ServerManager.h
UsersAccounting/server/headers/models/: CommandLineData.h
UsersAccounting/server/headers/repository/: DatabaseRepository.h
UsersAccounting/server/headers/server-manager/: ServerManager.h
UsersAccounting/server/headers/utils/: enumWrapper.h  enums.h  utils.h
UsersAccounting/server/src/: server.cpp
UsersAccounting/server/src/cmd_parser/: CommandLineParser.cpp
UsersAccounting/server/src/controllers/: ServerManager.cpp
UsersAccounting/server/src/repository/: DatabaseRepository.cpp
UsersAccounting/server/src/server-manager/: ServerManager.cpp
UsersAccounting/server/src/utils/: utils.cpp
